# llm-tui-rs

./: Cargo.toml  README.md  chats.json
src/: ai.rs  ai_backend.rs  app.rs  chat_branch.rs  chat_structs.rs  main.rs
src/ui/: chat_view.rs  main_menu.rs  mod.rs  settings.rs
